--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,11 @@
         "incenteev/composer-parameter-handler": "~2.0",
         "braincrafted/bootstrap-bundle": "~2.0",
         "twbs/bootstrap": "3.0.*",
-        "jquery/jquery":  "1.11.*"
+        "jquery/jquery":  "1.11.*",
+        "knplabs/knp-menu": "dev-master",
+        "knplabs/knp-menu-bundle": "dev-master",
+        "friendsofsymfony/user-bundle": "dev-master"
+
     },
     "scripts": {
         "post-install-cmd": [
