--- a/src/ECM/Bundle/HomeBundle/Resources/config/services.yml
+++ b/src/ECM/Bundle/HomeBundle/Resources/config/services.yml
@@ -5,3 +5,16 @@ services:
 #    ecm_home.example:
 #        class: %ecm_home.example.class%
 #        arguments: [@service_id, "plain_value", %parameter%]
+
+    ecm_home.menu_builder:
+        class: ECM\Bundle\HomeBundle\Menu\MenuBuilder
+        arguments: ["@knp_menu.factory"]
+
+    ecm_home.menu.main:
+        class: Knp\Menu\MenuItem # the service definition requires setting the class
+        factory_service: ecm_home.menu_builder
+        factory_method: createMainMenu
+        arguments: ["@request"]
+        scope: request # needed as we have the request as a dependency here
+        tags:
+            - { name: knp_menu.menu, alias: main }
