--- a/src/ECM/Bundle/UserBundle/Resources/config/routing.yml
+++ b/src/ECM/Bundle/UserBundle/Resources/config/routing.yml
@@ -1,3 +1,7 @@
 ecm_user_homepage:
     path:     /hello/{name}
     defaults: { _controller: ECMUserBundle:Default:index }
+
+ecm_user_login:
+    path: /connexion
+    defaults: { _controller: ECMUserBundle:Default:login }
