--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -6,3 +6,6 @@ ecm_home:
     resource: "@ECMHomeBundle/Resources/config/routing.yml"
     prefix:   /
 
+fos_user:
+    resource: "@FOSUserBundle/Resources/config/routing/all.xml"
+
