--- a/src/ECM/Bundle/HomeBundle/Resources/config/routing.yml
+++ b/src/ECM/Bundle/HomeBundle/Resources/config/routing.yml
@@ -3,21 +3,13 @@ ecm_home_homepage:
     defaults: { _controller: ECMHomeBundle:Default:index }
 ecm_home_contact:
     path: /contact
-    defaults:
-        _controller: FrameworkBundle:Template:template
-        template: 'ECMHomeBundle:Default:contact.html.twig'
+    defaults: { _controller: ECMHomeBundle:Default:contact }
 ecm_home_horaires:
     path: /horaires
-    defaults:
-        _controller: FrameworkBundle:Template:template
-        template: 'ECMHomeBundle:Default:horaires.html.twig'
+    defaults: { _controller: ECMHomeBundle:Default:horaires }
 ecm_home_tarifs:
     path: /tarifs-2014-2015
-    defaults:
-        _controller: FrameworkBundle:Template:template
-        template: 'ECMHomeBundle:Default:tarifs.html.twig'
+    defaults: { _controller: ECMHomeBundle:Default:tarifs }
 ecm_home_responsables:
     path: /responsables
-    defaults:
-        _controller: FrameworkBundle:Template:template
-        template: 'ECMHomeBundle:Default:responsables.html.twig'
+    defaults: { _controller: ECMHomeBundle:Default:responsables }
