--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,12 @@
+ecm_module:
+    resource: "@ECMModuleBundle/Resources/config/routing.yml"
+    prefix:   /
+
+ECMModuleBundle_admin_sponsor:
+    resource: "@ECMModuleBundle/Resources/config/routing/sponsor.yml"
+    prefix:   /admin/sponsor
+
+
 ecm_article:
     resource: "@ECMArticleBundle/Resources/config/routing.yml"
     prefix:   /
@@ -12,4 +21,5 @@ ecm_home:
 
 fos_user:
     resource: "@FOSUserBundle/Resources/config/routing/all.xml"
+
 
