--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,8 @@
         "jquery/jquery":  "1.11.*",
         "knplabs/knp-menu": "dev-master",
         "knplabs/knp-menu-bundle": "dev-master",
-        "friendsofsymfony/user-bundle": "dev-master"
+        "friendsofsymfony/user-bundle": "dev-master",
+        "egeloen/ckeditor-bundle": "~2.0"
 
     },
     "scripts": {
