--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,6 +1,6 @@
-ecm_admin:
-    resource: "@ECMAdminBundle/Resources/config/routing.yml"
-    prefix:   /
+#ecm_admin:
+#    resource: "@ECMAdminBundle/Resources/config/routing.yml"
+#    prefix:   /
 
 ecm_module:
     resource: "@ECMModuleBundle/Resources/config/routing.yml"
@@ -26,4 +26,11 @@ ecm_home:
 fos_user:
     resource: "@FOSUserBundle/Resources/config/routing/all.xml"
 
+admin:
+    resource: '@SonataAdminBundle/Resources/config/routing/sonata_admin.xml'
+    prefix: /admin
 
+_sonata_admin:
+    resource: .
+    type: sonata_admin
+    prefix: /admin
