--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,9 @@
         "knplabs/knp-menu": "dev-master",
         "knplabs/knp-menu-bundle": "dev-master",
         "friendsofsymfony/user-bundle": "dev-master",
-        "egeloen/ckeditor-bundle": "~2.0"
+        "egeloen/ckeditor-bundle": "~2.0",
+        "sonata-project/admin-bundle" : "dev-master",
+        "sonata-project/doctrine-orm-admin-bundle" : "dev-master"
 
     },
     "scripts": {
