--- a/src/ECM/Bundle/ArticleBundle/Resources/config/services.yml
+++ b/src/ECM/Bundle/ArticleBundle/Resources/config/services.yml
@@ -5,3 +5,8 @@ services:
 #    ecm_article.example:
 #        class: %ecm_article.example.class%
 #        arguments: [@service_id, "plain_value", %parameter%]
+    ecm.admin.article:
+        class: ECM\Bundle\ArticleBundle\Admin\ArticleAdmin
+        tags:
+            - { name: sonata.admin, manager_type: orm, group: ecm, label: Articles }
+        arguments: [null, ECM\Bundle\ArticleAdmin\Entity\Article, ECMArticleBundle:ArticleAdmin]
