Migration de l'administration vers Sonata

--- a/src/ECM/Bundle/ArticleBundle/Resources/config/routing.yml
+++ b/src/ECM/Bundle/ArticleBundle/Resources/config/routing.yml
@@ -6,8 +6,8 @@ ecm_articles_admin:
     path: /admin/articles
     defaults: { _controller: ECMArticleBundle:Default:administrationArticles }
     
-ecm_article_admin_modifier:
-    path: /admin/article/{id}
-    defaults: { _controller: ECMArticleBundle:Default:modifier }
-    requirements:
-        format: /d+
+#ecm_article_admin_modifier:
+#    path: /admin/article/{id}
+#    defaults: { _controller: ECMArticleBundle:Default:modifier }
+#    requirements:
+#        format: /d+
