--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,7 @@
         "knplabs/knp-menu-bundle": "dev-master",
         "friendsofsymfony/user-bundle": "dev-master",
         "egeloen/ckeditor-bundle": "~2.0",
-        "sonata-project/admin-bundle" : "dev-master",
+        "sonata-project/admin-bundle" : "~2.3",
         "sonata-project/doctrine-orm-admin-bundle" : "dev-master"
 
     },
