--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -34,3 +34,15 @@ _sonata_admin:
     resource: .
     type: sonata_admin
     prefix: /admin
+
+#sonata_cache_cache:
+#    resource: '@SonataCacheBundle/Resources/config/routing/cache.xml'
+#    prefix: /
+#
+#sonata_page_exceptions:
+#    resource: '@SonataPageBundle/Resources/config/routing/exceptions.xml'
+#    prefix: /
+#
+#sonata_page_cache:
+#    resource: '@SonataPageBundle/Resources/config/routing/cache.xml'
+#    prefix: /
