--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "symfony/symfony": "2.3.*",
         "doctrine/orm": ">=2.2.3,<2.4-dev",
         "doctrine/doctrine-bundle": "1.2.*",
+        "doctrine/data-fixtures": "~1.0",
         "twig/extensions": "1.0.*",
         "symfony/assetic-bundle": "2.3.*",
         "symfony/swiftmailer-bundle": "2.3.*",
@@ -35,14 +36,25 @@
         "braincrafted/bootstrap-bundle": "~2.0",
         "twbs/bootstrap": "3.0.*",
         "jquery/jquery":  "1.11.*",
-        "knplabs/knp-menu": "dev-master",
-        "knplabs/knp-menu-bundle": "dev-master",
         "friendsofsymfony/user-bundle": "dev-master",
         "egeloen/ckeditor-bundle": "~2.0",
         "sonata-project/admin-bundle" : "~2.3",
-        "sonata-project/doctrine-orm-admin-bundle" : "dev-master"
+        "sonata-project/doctrine-orm-admin-bundle" : "dev-master",
+        "sonata-project/formatter-bundle": "~2.3",
+        "sonata-project/cache-bundle": "~2.2",
+        "sonata-project/seo-bundle": "~1.1",
+        "sonata-project/easy-extends-bundle": "~2.1",
+        "sonata-project/notification-bundle": "~2.3",
+        "sonata-project/page-bundle": "~2.3",
+        "sonata-project/datagrid-bundle": "2.2.*@dev",
+        "sonata-project/doctrine-phpcr-admin-bundle": "~1.2",
+        "cocur/slugify": "~1.0",
+        "symfony-cmf/routing-auto-bundle": "~1.0",
+        "doctrine/phpcr-odm": "1.2.*",
+        "doctrine/phpcr-bundle": "1.2.*",
+        "jackalope/jackalope-doctrine-dbal": "~1.1"
 
-    },
+},
     "scripts": {
         "post-install-cmd": [
             "Incenteev\\ParameterHandler\\ScriptHandler::buildParameters",
