--- a/src/ECM/Bundle/ArticleBundle/Resources/config/routing.yml
+++ b/src/ECM/Bundle/ArticleBundle/Resources/config/routing.yml
@@ -1,11 +1,14 @@
-ecm_article_homepage:
-    path:     /hello/{name}
-    defaults: { _controller: ECMArticleBundle:Default:index }
+
  
-ecm_articles_admin:
-    path: /admin/articles
-    defaults: { _controller: ECMArticleBundle:Default:administrationArticles }
-    
+#ecm_articles_admin:
+#    path: /admin/articles
+#    defaults: { _controller: ECMArticleBundle:Default:administrationArticles }
+
+#ecm_articles_show_by_menu:
+#    path: /{titreMenu}
+#    defaults: { _controller: ECMArticleBundle:Default:showArticlesByMenu }
+
+
 #ecm_article_admin_modifier:
 #    path: /admin/article/{id}
 #    defaults: { _controller: ECMArticleBundle:Default:modifier }
