--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -218,8 +218,13 @@ cmf_core:
     persistence:
         phpcr:
             enabled: true
-
-
+#Stof
+stof_doctrine_extensions:
+    default_locale: en_US
+    orm:
+        default:
+            tree: true
+            sortable: true
 
 # Symfony CMF Auto-Routing Configuration
 cmf_routing:
