--- a/src/ECM/Bundle/ArticleBundle/Resources/config/routing.yml
+++ b/src/ECM/Bundle/ArticleBundle/Resources/config/routing.yml
@@ -8,6 +8,9 @@ ecm_articles_show_by_menu:
     path: /ecm/{titreMenu}
     defaults: { _controller: ECMArticleBundle:Default:showArticlesByMenu }
     
+ecm_articles_show_by_util:
+    path: /articles/user
+    defaults: { _controller: ECMArticleBundle:Article:getArticlesByUser }   
     
 #article_create:
 #    path: /ecm/AjoutArticle
