--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,7 @@
         "friendsofsymfony/user-bundle": "dev-master",
         "egeloen/ckeditor-bundle": "~2.0",
         "sonata-project/admin-bundle" : "~2.3",
-        "sonata-project/doctrine-orm-admin-bundle" : "dev-master",
+        "sonata-project/doctrine-orm-admin-bundle": "~2.3",
         "sonata-project/formatter-bundle": "~2.3",
         "sonata-project/cache-bundle": "~2.2",
         "sonata-project/seo-bundle": "~1.1",
