--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -19,6 +19,10 @@ ecm_user:
 ecm_home:
     resource: "@ECMHomeBundle/Resources/config/routing.yml"
     prefix:   /
+    
+# app/config/routing.yml
+elfinder:
+     resource: "@FMElfinderBundle/Resources/config/routing.yml"
 
 fos_user:
     resource: "@FOSUserBundle/Resources/config/routing/all.xml"
@@ -31,6 +35,9 @@ _sonata_admin:
     resource: .
     type: sonata_admin
     prefix: /admin
+    
+
+
 
 #sonata_cache_cache:
 #    resource: '@SonataCacheBundle/Resources/config/routing/cache.xml'
