--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,7 @@
+ecm_shop:
+    resource: "@ECMShopBundle/Resources/config/routing.yml"
+    prefix:   /
+
 ecm_admin:
     resource: "@ECMAdminBundle/Resources/config/routing.yml"
     prefix:   /
@@ -32,6 +36,13 @@ _sonata_admin:
     type: sonata_admin
     prefix: /admin
 
+gallery:
+    resource: '@SonataMediaBundle/Resources/config/routing/gallery.xml'
+    prefix: /media/gallery
+
+media:
+    resource: '@SonataMediaBundle/Resources/config/routing/media.xml'
+    prefix: /media
 #sonata_cache_cache:
 #    resource: '@SonataCacheBundle/Resources/config/routing/cache.xml'
 #    prefix: /
