--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,7 @@
         "jquery/jquery":  "1.11.*",
         "friendsofsymfony/user-bundle": "dev-master",
         "egeloen/ckeditor-bundle": "~2.0",
-        "sonata-project/admin-bundle" : "~2.3",
+        "sonata-project/admin-bundle": "2.4.*",
         "sonata-project/doctrine-orm-admin-bundle": "~2.3",
         "sonata-project/formatter-bundle": "~2.3",
         "sonata-project/cache-bundle": "~2.2",
@@ -51,7 +51,9 @@
         "gedmo/doctrine-extensions": "~2.3",
         "knplabs/doctrine-behaviors": "~1.0",
         "pixassociates/sortable-behavior-bundle": "0.1.*@dev",
-        "stof/doctrine-extensions-bundle": "~1.1"
+        "stof/doctrine-extensions-bundle": "~1.1",
+        "sonata-project/media-bundle": "~2.3",
+        "jms/serializer-bundle": "0.13.*"
 
 },
     "scripts": {
@@ -75,7 +77,7 @@
     "config": {
         "bin-dir": "bin"
     },
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "extra": {
         "symfony-app-dir": "app",
         "symfony-web-dir": "web",
